--- a/src/components/Frame/Frame.module.css
+++ b/src/components/Frame/Frame.module.css
@@ -1,11 +1,19 @@
 .frame {
-  width: 80px;
-  height: 80px;
-  margin: 0.5rem;
-  border: 1px solid salmon;
+  /* width: 80px;
+  height: 80px; */
+  /* width: 100%; */
+  /* display: inline; */
 }
 .frame img {
-  width: 100%;
-  height: 100%;
+  width: 80px;
+  height: 80px;
+  /* margin: auto 5px; */
 }
-
+/* 
+.frameDiv {
+  width: 80px;
+  height: 80px;
+  height: auto;
+  margin: 0.5rem;
+  border: 1px solid salmon;
+} */
