--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -1,6 +1,8 @@
 .canvas {
+}
+.canvasDiv {
   flex: 1;
-  background-color: rgba(122, 245, 125, 0.2);
+  background-color: #142850;
 }
 canvas {
   /* width: 250px;
@@ -13,7 +15,6 @@ canvas {
   border: 1px solid black;
 }
 
-
-.op{
-  border:1px solid skyblue
+.op {
+  border: 1px solid skyblue;
 }
