--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -1,3 +1,73 @@
-.controls{
-    background-color: rgb(49, 70, 255);
+.controls {
+  background-color: #0c7b93;
+  width: 100px;
+}
+.colorPicker {
+ 
+position: relative;
+}
+.colorPicker img {
+  width: 30px;
+  background: #3bacb6;
+  padding: 0.5rem;
+  /* flex: 1; */
+  /* width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    padding: 0.5rem; */
+  box-shadow: 5px 5px 2px 0px rgba(0, 67, 82, 1);
+}
+
+.preview {
+  width: 20px;
+  height: 20px;
+  border: 1px solid white;
+  border-radius: 4px;
+  /* flex: 1; */
+}
+.drawControl {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* grid-template-columns: repeat(1, 1fr); */
+}
+.drawControl > section {
+  /* background-color: darkkhaki; */
+  /* border: 1px solid red; */
+  margin: 0.2rem 0rem;
+  position: relative;
+}
+.drawControl > section[data-tooltip]:hover::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  left: 50px;
+  top: 10px;
+  min-width: 75px;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 2px;
+  background: white;
+  padding: 3px;
+  color: #000000;
+  font-size: 11px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+}
+.drawControlImage {
+  width: 30px;
+  /* background-color: #00a8cc; */
+  padding: 0.5rem;
+  border-radius: 0px;
+  /* background: linear-gradient(225deg, #00b4da, #0097b8); */
+  background: #3bacb6;
+  box-shadow: 5px 5px 2px 0px rgba(0, 67, 82, 1);
+
+  /* border-radius: 4px; */
+}
+.checked {
+  /* background-color: aqua; */
+  border-radius: 0px;
+  /* box-shadow: none; */
+  /* background: linear-gradient(225deg, #00b4da, #0097b8); */
+  background: #3bacb6;
+  box-shadow: inset 5px 5px 5px -2px #004352;
 }
