--- a/src/Control/Control.module.css
+++ b/src/Control/Control.module.css
@@ -1,49 +1,15 @@
-.controls {
-  background-color: #0c7b93;
-  width: 100px;
-}
-.colorPicker {
- 
-position: relative;
-}
-.colorPicker img {
-  width: 30px;
-  background: #3bacb6;
-  padding: 0.5rem;
-  /* flex: 1; */
-  /* width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    padding: 0.5rem; */
-  box-shadow: 5px 5px 2px 0px rgba(0, 67, 82, 1);
-}
-
-.preview {
-  width: 20px;
-  height: 20px;
-  border: 1px solid white;
-  border-radius: 4px;
-  /* flex: 1; */
-}
-.drawControl {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  /* grid-template-columns: repeat(1, 1fr); */
-}
-.drawControl > section {
+section {
   /* background-color: darkkhaki; */
   /* border: 1px solid red; */
   margin: 0.2rem 0rem;
   position: relative;
 }
-.drawControl > section[data-tooltip]:hover::after {
+section[data-tooltip]:hover::after {
   content: attr(data-tooltip);
   position: absolute;
   left: 50px;
   top: 10px;
-  
+
   min-width: 75px;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 2px;
