--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -1,4 +1,7 @@
 .canvas {
+  /* background-color: blueviolet; */
+  margin: 0 auto;
+
 }
 .canvasDiv {
   flex: 1;
@@ -9,7 +12,9 @@ canvas {
     height: 250px; */
   /* box-sizing: border-box; */
   background-color: white;
-
+  /* background-image: url('../../assets/colorWheel.png'); */
+  
+  z-index: 111;
   padding: 0;
   margin: 0;
   border: 1px solid black;
@@ -17,4 +22,8 @@ canvas {
 
 .op {
   border: 1px solid skyblue;
+}
+.onionImage {
+  position: absolute;
+  opacity: 0.2;
 }
