--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -1,10 +1,11 @@
 .controls {
   background-color: #0c7b93;
-  width: 100px;
+  width: 130px;
+  /* height: 70%; */
+  border-bottom-right-radius: 16px;
 }
 .colorPicker {
- 
-position: relative;
+  position: relative;
 }
 .colorPicker img {
   width: 30px;
@@ -43,7 +44,7 @@ position: relative;
   position: absolute;
   left: 50px;
   top: 10px;
-  
+
   min-width: 75px;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 2px;
@@ -71,4 +72,20 @@ position: relative;
   /* background: linear-gradient(225deg, #00b4da, #0097b8); */
   background: #3bacb6;
   box-shadow: inset 5px 5px 5px -2px #004352;
+}
+
+.allButtons {
+  display: flex;
+  padding-top: 1.5rem;
+  flex-direction: column;
+}
+.button {
+  /* width: 100%; */
+  /* color: red; */
+  padding: 0.5rem;
+  margin: 0;
+  cursor: pointer;
+  font-size: medium;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
