--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -1,3 +1,16 @@
 .toolbar{
-    height: 50px;
+    /* height: 50px; */
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    background-color: #27496d;
+    color: white;
+    position: relative;
+}
+.menu{
+    background-color: white;
+    top: 100%;
+    display: none;
+    z-index: 1111;
+    position: absolute;
 }
