fix:undo & redo

--- a/src/components/Tool/Tool.module.css
+++ b/src/components/Tool/Tool.module.css
@@ -10,3 +10,8 @@
     color: white;
     border-radius: 8px;
 }
+.tool:disabled:hover{
+    background-color: #00336a ;
+    /* color: white;
+    border-radius: 8px; */
+}
