--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -1,16 +1,34 @@
-.toolbar{
-    /* height: 50px; */
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    background-color: #27496d;
-    color: white;
-    position: relative;
+.toolbar {
+  /* height: 50px; */
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  background-color: #27496d;
+  color: white;
+  position: relative;
 }
-.menu{
-    background-color: white;
-    top: 100%;
-    display: none;
-    z-index: 1111;
-    position: absolute;
+.menu {
+  background-color: white;
+  top: 100%;
+  display: none;
+  z-index: 1111;
+  position: absolute;
+}
+.tool {
+  border: 1px solid #27496d;
+  padding: 0.3rem 0.5rem;
+  /* margin: 0.1rem 0.2rem; */
+  background-color: #3ab0ff;
+  cursor: pointer;
+  margin: 0;
+  /* border-radius: 4px; */
+  color: white;
+}
+.tool:hover {
+  background-color: #0099ff;
+}
+.tool:disabled:hover{
+  background-color: #3ab0ff ;
+  /* color: white;
+  border-radius: 8px; */
 }
