--- a/src/components/FramesNControl/FramesNControl.module.css
+++ b/src/components/FramesNControl/FramesNControl.module.css
@@ -1,15 +1,20 @@
 .frames {
   background-color: #27496d;
-  height: 250px;
-  position: relative;
+
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 .allFrames {
-  max-width: 80%;
+  max-width: 100%;
   list-style: none;
   margin: 0;
-  border: 1px solid skyblue;
+  height: 126px;
+  /* border: 1px solid skyblue; */
   display: flex;
+  background-color: #00356f;
   justify-content: flex-start;
+  align-items: center;
   /* flex-wrap: wrap; */
   /* overflow-x: scroll;
   position: absolute; */
@@ -19,3 +24,27 @@
 /* .childAllFrames {s
   display: flex;
 } */
+.frameControlButtons {
+  background-color: #27496d;
+  display: flex;
+  /* position: fixed; */
+  /* bottom: 0; */
+  padding: 0.2rem 0;
+}
+.frameControlButton {
+  margin: 0;
+  background-color: #27496d;
+  color: white;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* vertical-align: middle; */
+  font-size: 1rem;
+  outline: none;
+}
+.icon {
+  font-weight: bold;
+  padding-right: 0.5rem;
+}
