--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -16,9 +16,10 @@
 }
 .tool {
   border: 1px solid #27496d;
-  padding: 0.3rem 0.5rem;
+  padding: 0.4rem 0.5rem;
   /* margin: 0.1rem 0.2rem; */
-  background-color: #3ab0ff;
+  background-color: #27496d;
+  font-size: 0.98rem;
   cursor: pointer;
   margin: 0;
   /* border-radius: 4px; */
