--- a/src/components/FramesNControl/FramesNControl.module.css
+++ b/src/components/FramesNControl/FramesNControl.module.css
@@ -1,5 +1,5 @@
 .frames {
-  background-color: #27496d;
+  background-color: #00356f;
 
   position: fixed;
   width: 100%;
@@ -49,6 +49,17 @@
   background-color: #0099ff;
 }
 .icon {
-  font-weight: bold;
+  font-weight: bolder;
+  font-size: 1rem;
   padding-right: 0.5rem;
+}
+.controlFrame{
+  background-color: #005a96;
+  display: flex;
+  align-items: center;
+  padding: 0.55rem;
+}
+.controlFrame p{
+  padding: 0 1rem;
+margin: 0;
 }
