--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -18,12 +18,49 @@
 }
 
 .preview {
-  width: 20px;
+  /* width: 20px;
   height: 20px;
   border: 1px solid white;
-  border-radius: 4px;
+  border-radius: 4px; */
   /* flex: 1; */
 }
+.colorPicker{
+  border: 1px solid fuchsia;
+  position: relative;
+  width: 5rem;
+  height: 5rem;
+  margin-top: 1rem !important;
+}
+.colorBox{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  border-radius: 4px;
+  border: 2px solid white;
+}
+.colorBox:hover{
+  opacity: 0.7;
+}
+.primary{
+  left:-5px;
+  top:0;
+  z-index: 11;
+}
+.secondary{
+  right:-5px;
+  z-index: 10;
+  bottom: 0;
+}
+.switchColor{
+  position: absolute;
+  font-size: 1.2rem;
+  font-weight: bolder;
+  bottom: 2px;
+  cursor: pointer;
+  left: 2px;
+  /* border: 1px solid red; */
+}
+
 .drawControl {
   display: flex;
   flex-direction: column;
