--- a/src/components/Control/Control.module.css
+++ b/src/components/Control/Control.module.css
@@ -4,12 +4,12 @@ section {
   margin: 0.2rem 0rem;
   position: relative;
 }
-section[data-tooltip]:hover::after {
+/* section[data-tooltip]:hover::after {
   content: attr(data-tooltip);
   position: absolute;
   left: 50px;
   top: 10px;
-z-index: 11;
+  z-index: 11;
   min-width: 75px;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 2px;
@@ -18,23 +18,40 @@ z-index: 11;
   color: #000000;
   font-size: 11px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-}
+} */
 .drawControlImage {
   width: 30px;
   /* background-color: #00a8cc; */
   padding: 0.5rem;
   border-radius: 0px;
   /* background: linear-gradient(225deg, #00b4da, #0097b8); */
-  background: #3bacb6;
-  box-shadow: 5px 5px 2px 0px rgba(0, 67, 82, 1);
+  background: #3b3b3f;
+  /* box-shadow: 5px 5px 2px 0px rgba(0, 67, 82, 1); */
 
   /* border-radius: 4px; */
+}
+.drawControlImage:hover{
+  background-color: rgba(151, 151, 151, 0.5);
+  border-radius: 4px;
 }
 .checked {
   /* background-color: aqua; */
   border-radius: 0px;
   /* box-shadow: none; */
   /* background: linear-gradient(225deg, #00b4da, #0097b8); */
-  background: #3bacb6;
-  box-shadow: inset 5px 5px 5px -2px #004352;
+  background-color: #036fb4 !important;
+  border-radius: 4px;
+  /* box-shadow: inset 5px 5px 5px -2px #004352; */
+}
+
+.control {
+
+  /* position: relative; */
+
+}
+.tooltip {
+  /* position: absolute;
+  z-index: 111;
+
+  background-color: white; */
 }
