--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -1,6 +1,7 @@
 .controls {
-  background-color: #0c7b93;
-  width: 130px;
+  background-color: #3b3b3f;
+  width: 100px;
+  position: relative;
 }
 .colorPicker {
   position: relative;
@@ -24,43 +25,46 @@
   border-radius: 4px; */
   /* flex: 1; */
 }
-.colorPicker{
-  border: 1px solid fuchsia;
+.colorPicker {
+  /* border: 1px solid fuchsia; */
   position: relative;
   width: 5rem;
   height: 5rem;
   margin-top: 1rem !important;
 }
-.colorBox{
+.colorBox {
   width: 50px;
   height: 50px;
   position: absolute;
   border-radius: 4px;
   border: 2px solid white;
 }
-.colorBox:hover{
+.colorBox:hover {
   opacity: 0.7;
 }
-.primary{
-  left:-5px;
-  top:0;
+.primary {
+  left: -5px;
+  top: 0;
   z-index: 11;
 }
-.secondary{
-  right:-5px;
+.secondary {
+  right: -5px;
   z-index: 10;
   bottom: 0;
 }
-.switchColor{
+.switchColor {
   position: absolute;
   font-size: 1.2rem;
   font-weight: bolder;
   bottom: 2px;
   cursor: pointer;
+  color: #979797;
   left: 2px;
   /* border: 1px solid red; */
 }
-
+.switchColor:hover{
+  color: white;
+}
 .drawControl {
   display: flex;
   flex-direction: column;
@@ -123,4 +127,26 @@
   font-size: medium;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.mirror {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* background-color: bisque; */
+}
+.mirror:hover {
+  background-color: bisque;
+}
+.mirrorDot {
+  width: 10px;
+  height: 10px;
+  background-color: #3bacb6;
+}
+.mirrorEnabled {
+  background-color: bisque;
+}
+.mirrorDisabled {
+  background-color: grey;
 }
