--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -33,7 +33,7 @@
   background-color: #0099ff;
 }
 .tool:disabled:hover {
-  background-color: #3ab0ff;
+  background-color: #3b3b3f;
   /* color: white;
   border-radius: 8px; */
 }
