--- a/src/components/ControlPickerMirror/ControlPickerMirror.module.css
+++ b/src/components/ControlPickerMirror/ControlPickerMirror.module.css
@@ -51,11 +51,14 @@
   height: 50px;
   display: flex;
   justify-content: space-around;
+  border-radius: 4px;
   align-items: center;
+  background-color: #3b3b3f;
+
   /* background-color: bisque; */
 }
 .mirror:hover {
-  background-color: bisque;
+  background-color: rgba(255, 255, 255, 0.089);
 }
 .mirrorDot {
   width: 10px;
@@ -63,8 +66,10 @@
   background-color: #3bacb6;
 }
 .mirrorEnabled {
-  background-color: bisque;
+  background-color: rgba(255, 255, 255, 0.2) !important;
 }
 .mirrorDisabled {
-  background-color: grey;
+  background-color: #3b3b3f;
+  cursor: not-allowed;
 }
+/* background-color: #3b3b3f; */
