--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -6,6 +6,14 @@
 .colorPicker {
   position: relative;
 }
+.toolName{
+  color: white ;
+  font-weight: 500;
+  font-size: 0.8rem;
+  /* border: 1px solid red; */
+  align-self: stretch;
+  padding: 8px 0;
+}
 .colorPicker img {
   width: 30px;
   background: #3bacb6;
