--- a/src/components/Frame/Frame.module.css
+++ b/src/components/Frame/Frame.module.css
@@ -1,43 +1,38 @@
 .frame {
-  /* width: 80px;
-  height: 80px; */
-  /* width: 100%; */
-  /* display: inline; */
   display: flex;
   flex-direction: column;
-  margin: 0.5rem 1rem;
+  /* margin-right: rem; */
   position: relative;
+  min-width: 90px;
+  min-height: 90px;
+  cursor: pointer;
   box-sizing: border-box;
 }
-.frame img {
-  max-width: 80px;
-  max-height: 80px;
-  padding-bottom: 4px;
-  flex: 1;
-  cursor: pointer;
-  /* margin: auto 5px; */
-}
-/* 
-.frameDiv {
-  width: 80px;
-  height: 80px;
-  height: auto;
-  margin: 0.5rem;
-  border: 1px solid salmon;
-} */
 
-.thisFrame img {
-  /* border-bottom: 3px solid #be2c00; */
-  /* border-radius: 4px; */
+.imageWrapper {
+  flex: 1;
+  position: relative;
+  display: block;
+  height: 80px;
+  width: 80px;
 }
-.thisFrame {
-  border-bottom: 4px solid rgb(0, 255, 0);
+
+.image {
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  border: 1px solid transparent;
+  height: 2px;
+  width: 2px;
 }
+
+
 .index {
   color: black;
   position: absolute;
-  background-color: white;
-  margin: 0;
-  padding: 4px;
-  border-radius: 4px;
+  background-color: rgb(0, 255, 0);
+  margin: auto;
+  width: 100%;
+  height: 4px;
+  bottom: 0;
 }
